<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="17dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/login_kr"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/background_rec_balck"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:imeOptions="actionDone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/background_rec_balck"
            android:gravity="center"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:imeOptions="actionDone"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/imgae_button_login"
            android:gravity="center"
            android:text="@string/login_en"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_find_user_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:gravity="center"
            android:text="@string/find_user_info"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>


















