<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginBottom="22dp"
                    android:background="@drawable/background_rec_balck"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:inputType="textEmailAddress"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginBottom="22dp"
                    android:background="@drawable/background_rec_balck"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:text="@string/password_notify"
                        android:textSize="11sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginBottom="22dp"
                    android:background="@drawable/background_rec_balck"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/location"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:text="@string/location_info"
                        android:textSize="11sp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="2dp"
                        android:gravity="center"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/ed_location"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/background_rec_balck"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:textSize="15sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/background_rec_balck"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tv_user_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/user_age"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/ed_user_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:minWidth="40dp"
                        app:layout_constraintEnd_toEndOf="@id/tv_user_age"
                        app:layout_constraintStart_toStartOf="@id/tv_user_age"
                        app:layout_constraintTop_toBottomOf="@id/tv_user_age" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        app:layout_constraintBottom_toBottomOf="@id/ed_user_age"
                        app:layout_constraintStart_toEndOf="@id/ed_user_age"
                        app:layout_constraintTop_toTopOf="@id/ed_user_age" />


                    <TextView
                        android:id="@+id/tv_sleep_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:text="@string/sleep_time"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_user_age"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/ed_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="time"
                        android:minWidth="40dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/tv_sleep_time"
                        app:layout_constraintTop_toBottomOf="@id/tv_sleep_time" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/time_info"
                        android:textSize="10sp"
                        app:layout_constraintEnd_toEndOf="@id/tv_time"
                        app:layout_constraintTop_toBottomOf="@id/ed_time" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        app:layout_constraintBottom_toBottomOf="@id/ed_time"
                        app:layout_constraintStart_toEndOf="@id/ed_time"
                        app:layout_constraintTop_toTopOf="@id/ed_time" />

                    <TextView
                        android:id="@+id/tv_pay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/hope_pay"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ed_user_age" />

                    <EditText
                        android:id="@+id/ed_pay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:minWidth="100dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_pay" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/million"
                        app:layout_constraintBottom_toBottomOf="@id/ed_pay"
                        app:layout_constraintStart_toEndOf="@id/ed_pay"
                        app:layout_constraintTop_toTopOf="@id/ed_pay" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tv_create"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/imgae_button_login"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/login_en"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>